<resources>
    <string name="app_name">Orders</string>
    <string name="loading_orders">Loading Orders ...</string>
    <string name="orders_list">Order list</string>
    <string name="order_name">Name of the order</string>
    <string name="orders_main_list">Orders</string>
    <string name="order_list">Order List</string>
    <string name="ordered_products_list">Ordered Products List</string>
    <string name="languages"> %s</string>
    <string name="date">%s</string>
    <string name="amount">$ %s</string>
    <string name="openIssues">Open Issues: %s</string>
    <string name="created_at">Created At: %s</string>
    <string name="updated_at">Updated At: %s</string>
    <string name="clone_url">Clone URL: %s</string>
    <string name="order_language">Order Language</string>
    <string name="order_watchers">Order Watchers</string>
    <string name="order_description">Order Description</string>
    <string name="open_issues">Open Issues</string>
    <string name="total_amount">TOTAL AMOUNT FOR ACCEPTED ORDERS</string>
    <string name="order_number">ORDER NUMBER</string>
    <string name="requested_on">REQUESTED ON</string>
    <string name="accepted_on">ACCEPTED ON</string>
    <string name="venue_info">Venue Info</string>
    <string name="sample_name_1">Albert Burke</string>
    <string name="sample_phone_number">+65 1234 5678</string>
    <string name="sample_name_2">Nannie Sullivan</string>
    <string name="sample_address">164, Kallang Way, Singapore</string>
    <string name="included_products">Included Products</string>
    <string name="notes">Notes</string>
    <string name="product">PRODUCT</string>
    <string name="total">TOTAL AMOUNT</string>
    <string name="total_amount_bottom">Total Amount:</string>
    <string name="sample_total_amount">$16,080.60</string>
    <string name="accept_order">ACCEPT ORDER</string>
    <string name="no_notes">No notes included in this order</string>
    <string name="your_notes_will_appear">Your notes will appear here as soon as someone leaves one</string>
    <string name="total_amount_title">$34,194.80</string>
    <string name="quantity">Quantity:</string>
    <string name="bottoms_up">Bottoms Up</string>
</resources>
