<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_light_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="7dp"
            android:paddingRight="7dp">

            <TextView
                android:id="@+id/dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/title_margin"
                android:layout_toLeftOf="@id/image"
                android:text="@string/orders_main_list"
                android:textAlignment="viewStart"
                android:textColor="@color/item_dark_background"
                android:textSize="@dimen/order_header1"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/title_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:src="@drawable/img_orders" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="@dimen/item_horizontal_margin"
                android:orientation="horizontal"
                app:cardElevation="0dp"
                android:backgroundTint="@color/item_light_background"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/amount_border"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_orders_total_ammount" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/item_horizontal_margin"
                        android:layout_marginEnd="@dimen/item_horizontal_margin"

                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/order_language"
                            android:text="@string/total_amount"
                            android:textStyle="bold"
                            android:textSize="@dimen/title_text" />

                        <TextView
                            android:id="@+id/orderDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/order_watchers"
                            android:text="$34,194.80"
                            android:textColor="@color/item_dark_background"
                            android:textStyle="bold"
                            android:textSize="@dimen/title_text_large" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lined_background"
                android:layout_marginTop="180dp"
                android:contentDescription="@string/order_list"
                app:layoutManager="LinearLayoutManager" />

        </RelativeLayout>
    </LinearLayout>
</layout>