<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/list_item_color"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:paddingStart="50dp"
                    android:paddingTop="30dp"
                    android:paddingEnd="50dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/img_no_notes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/no_notes"
                    android:textColor="@color/item_dark_background"
                    android:textSize="@dimen/details_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/your_notes_will_appear"
                    android:textSize="@dimen/dialog_text"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ordered_products_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/order_list"
                app:layoutManager="LinearLayoutManager" />

        </LinearLayout>

    </LinearLayout>
</layout>